<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/volunteerfeed"
        android:enabled="true"
        android:icon="@drawable/ic_rss_feed_black_24dp"
        android:title="@string/volunteer_feed"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/volunteerform"
        android:enabled="true"
        android:icon="@drawable/ic_format_list_bulleted_black_24dp"
        android:title="@string/volunterr_form"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/volunteerdetails"
        android:enabled="true"
        android:icon="@drawable/ic_details_black_24dp"
        android:title="@string/doctor_profile"
        app:showAsAction="ifRoom" />
</menu>